// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OrderConfirmationPage /> should match the snapshot and have expected props for Ed 1`] = `
<div>
  <div
    class="makeStyles-header-11"
  >
    <img
      alt="WellLogo"
      class="makeStyles-wellLogo-13"
      src="Well.svg"
    />
    <div
      class="makeStyles-textContainer-14"
    >
      <p
        class="MuiTypography-root MuiTypography-body1"
      >
        Pharmacy Services
      </p>
    </div>
  </div>
  <hr
    class="MuiDivider-root makeStyles-divider-12"
  />
  <div
    class="MuiContainer-root makeStyles-pageMargin-1 MuiContainer-maxWidthSm"
  >
    <div
      class="MuiPaper-root MuiCard-root makeStyles-card-5 MuiPaper-elevation1 MuiPaper-rounded"
    >
      <h2
        class="MuiTypography-root makeStyles-largeMarginTop-2 MuiTypography-h2"
      >
        Thank you, we have received your order
      </h2>
      <h5
        class="MuiTypography-root makeStyles-largeMarginTop-2 MuiTypography-h5"
      >
        Your order number 
        1234567
      </h5>
      <div
        class="makeStyles-horizontalText-8"
      >
        <div
          class="makeStyles-textBox-9"
        >
          <h5
            class="MuiTypography-root MuiTypography-h5"
          >
            viagra connect 
          </h5>
        </div>
        <div
          class="makeStyles-textBox-9"
        >
          <h5
            class="MuiTypography-root MuiTypography-h5"
          >
            Estimated delivery
          </h5>
          <h5
            class="MuiTypography-root MuiTypography-h5"
          >
            2 to 4 days
          </h5>
        </div>
      </div>
      <div
        class="makeStyles-smallMarginTop-4"
      >
        <div
          class="makeStyles-root-15 makeStyles-infoType-16"
        >
          <div
            class="makeStyles-icon-17"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 8h-3V4H3c-1.1 0-2 .9-2 2v11h2c0 1.66 1.34 3 3 3s3-1.34 3-3h6c0 1.66 1.34 3 3 3s3-1.34 3-3h2v-5l-3-4zM6 18.5c-.83 0-1.5-.67-1.5-1.5s.67-1.5 1.5-1.5 1.5.67 1.5 1.5-.67 1.5-1.5 1.5zm13.5-9l1.96 2.5H17V9.5h2.5zm-1.5 9c-.83 0-1.5-.67-1.5-1.5s.67-1.5 1.5-1.5 1.5.67 1.5 1.5-.67 1.5-1.5 1.5z"
              />
            </svg>
          </div>
          <div
            class="makeStyles-message-18"
          >
            This item has free delivery. It is delivered in discreet unbranded packaging.
          </div>
        </div>
      </div>
      <hr
        class="MuiDivider-root makeStyles-divider-10"
      />
      <h2
        class="MuiTypography-root makeStyles-header-19 MuiTypography-h2"
      >
        Important information about your order
      </h2>
      <h2
        class="MuiTypography-root makeStyles-largeMarginTop-2 MuiTypography-h2"
      >
        What happens next?
      </h2>
      <p
        class="MuiTypography-root makeStyles-captionTextLargeMargin-7 MuiTypography-body1"
      >
        Step 1
      </p>
      <h3
        class="MuiTypography-root makeStyles-smallMarginTop-4 MuiTypography-h3"
      >
        Pharmacist approval
      </h3>
      <p
        class="MuiTypography-root makeStyles-captionText-6 MuiTypography-body1"
      >
        One of our pharmacists will confirm you’re eligible for
         
        ED
         
        treatment. This is to make sure your treatment is safe and suitable for you.
      </p>
      <h5
        class="MuiTypography-root makeStyles-marginTop-3 MuiTypography-h5"
      >
        What if my order isn't approved?
      </h5>
      <p
        class="MuiTypography-root makeStyles-captionText-6 MuiTypography-body1"
      >
        If our pharmacist can’t approve your order, they’ll explain the reason for this in an email.
      </p>
      <p
        class="MuiTypography-root makeStyles-captionTextLargeMargin-7 MuiTypography-body1"
      >
        Step 2
      </p>
      <h3
        class="MuiTypography-root makeStyles-smallMarginTop-4 MuiTypography-h3"
      >
        Order dispatched
      </h3>
      <p
        class="MuiTypography-root makeStyles-captionText-6 MuiTypography-body1"
      >
        We’ll dispatch your order as soon as a pharmacist approves it. Dispatch will be on the same working day if you made your order before 3pm.
        <br />
        <br />
        If you ordered after 3pm, we’ll dispatch your order the next working day. If you ordered over the weekend, your order will be processed on the next working day.
      </p>
      <p
        class="MuiTypography-root makeStyles-captionTextLargeMargin-7 MuiTypography-body1"
      >
        Step 3
      </p>
      <h3
        class="MuiTypography-root makeStyles-smallMarginTop-4 MuiTypography-h3"
      >
        Delivery
      </h3>
      <p
        class="MuiTypography-root makeStyles-captionText-6 MuiTypography-body1"
      >
        We’ll email you to let you know your order is out for delivery. It should be with you in 2-4 days.
      </p>
    </div>
  </div>
  <div
    class="makeStyles-container-23"
  >
    <hr
      class="MuiDivider-root"
    />
    <div
      class="makeStyles-upperSection-25"
    >
      <div
        class="makeStyles-upperCaptionContainer-27"
      >
        <a
          href="https://www.well.co.uk/"
        >
          <img
            alt="wellLogo"
            class="makeStyles-wellLogo-36"
            src="WellLogo.svg"
          />
        </a>
        <p
          class="MuiTypography-root makeStyles-caption-24 MuiTypography-body1"
        >
          This content was written and edited by Well. Our health information is evidence based, up-to-date and reviewed by health professionals. It isn’t intended to replace the medical information given to you by your doctor. We aim to provide you with the knowledge and support you need to make confident decisions about your health and wellbeing.
        </p>
      </div>
      <div
        class="makeStyles-linksList-29"
      >
        <h6
          class="MuiTypography-root makeStyles-links-30 MuiTypography-h6"
        >
          <a
            class="makeStyles-linkStyle-37"
            href="https://www.well.co.uk/about-us/policies/terms-and-conditions-vaccination-services"
          >
            Terms and conditions
          </a>
        </h6>
        <h6
          class="MuiTypography-root makeStyles-links-30 MuiTypography-h6"
        >
          <a
            class="makeStyles-linkStyle-37"
            href="https://www.well.co.uk/about-us/policies/privacy"
          >
            Privacy policy
          </a>
        </h6>
        <h6
          class="MuiTypography-root makeStyles-links-30 MuiTypography-h6"
        >
          <a
            class="makeStyles-linkStyle-37"
            href="https://www.well.co.uk/about-us/policies/cookies"
          >
            Cookies
          </a>
        </h6>
      </div>
      <div
        class="makeStyles-supportEmail-31"
      >
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
          For support email
        </p>
        <h6
          class="MuiTypography-root MuiTypography-h6"
        >
          <a
            class="makeStyles-linkStyle-37"
            href="mailto:hello@well.co.uk"
          >
            hello@well.co.uk
          </a>
        </h6>
      </div>
    </div>
    <hr
      class="MuiDivider-root"
    />
    <div
      class="makeStyles-lowerSection-26"
    >
      <div
        class="makeStyles-lowerCaptionContainer-28"
      >
        <p
          class="MuiTypography-root makeStyles-caption-24 MuiTypography-body1"
        >
          Bestway National Chemists Limited is registered in England and Wales, trading as Well and Well Pharmacy. Our online pharmacy (well.co.uk) registration number is 9010492 and the registered pharmacy address is: Well, Healthcare Service Centre, Meir Park, Stoke-on-Trent, Staffordshire, ST3 7UN. If you would like to know who the Responsible Pharmacist is at any given time, please email nhspharmacy.stoke.well.co.ukfap20@nhs.net or call 01782 597313. You can also contact the pharmacy on hello@well.co.uk. Our Superintendent Pharmacist is Iftkhar Ahmad Khan, FRPharmS. GPhC Registration Number: 2041286. You can find out more about checking if an online pharmacy is operating legally from the General Pharmaceutical Council (GPhC).
        </p>
      </div>
      <div
        class="makeStyles-logoContainer-35"
      >
        <a
          href="https://www.nhs.uk/"
        >
          <img
            alt="nhs"
            class="makeStyles-logo1-32"
            src="NHS.png"
          />
        </a>
        <a
          href="https://www.legitscript.com/websites/well.co.uk"
        >
          <img
            alt="well"
            class="makeStyles-logo2-33"
            src="Well.svg"
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`<OrderConfirmationPage /> should match the snapshot and have expected props for Hana 1`] = `
<div>
  <div
    class="makeStyles-header-48"
  >
    <img
      alt="WellLogo"
      class="makeStyles-wellLogo-50"
      src="Well.svg"
    />
    <div
      class="makeStyles-textContainer-51"
    >
      <p
        class="MuiTypography-root MuiTypography-body1"
      >
        Pharmacy Services
      </p>
    </div>
  </div>
  <hr
    class="MuiDivider-root makeStyles-divider-49"
  />
  <div
    class="MuiContainer-root makeStyles-pageMargin-38 MuiContainer-maxWidthSm"
  >
    <div
      class="MuiPaper-root MuiCard-root makeStyles-card-42 MuiPaper-elevation1 MuiPaper-rounded"
    >
      <h2
        class="MuiTypography-root makeStyles-largeMarginTop-39 MuiTypography-h2"
      >
        Thank you, we have received your order
      </h2>
      <h5
        class="MuiTypography-root makeStyles-largeMarginTop-39 MuiTypography-h5"
      >
        Your order number 
        1234567
      </h5>
      <div
        class="makeStyles-horizontalText-45"
      >
        <div
          class="makeStyles-textBox-46"
        >
          <h5
            class="MuiTypography-root MuiTypography-h5"
          >
            name-default 
          </h5>
        </div>
        <div
          class="makeStyles-textBox-46"
        >
          <h5
            class="MuiTypography-root MuiTypography-h5"
          >
            Estimated delivery
          </h5>
          <h5
            class="MuiTypography-root MuiTypography-h5"
          >
            2 to 4 days
          </h5>
        </div>
      </div>
      <div
        class="makeStyles-smallMarginTop-41"
      >
        <div
          class="makeStyles-root-52 makeStyles-infoType-53"
        >
          <div
            class="makeStyles-icon-54"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"
              />
            </svg>
          </div>
          <div
            class="makeStyles-message-55"
          >
            Includes ongoing support from our pharmacists.
          </div>
        </div>
      </div>
      <hr
        class="MuiDivider-root makeStyles-divider-47"
      />
      <h2
        class="MuiTypography-root makeStyles-header-56 MuiTypography-h2"
      >
        Important information about your order
      </h2>
      <h2
        class="MuiTypography-root makeStyles-largeMarginTop-39 MuiTypography-h2"
      >
        What happens next?
      </h2>
      <p
        class="MuiTypography-root makeStyles-captionTextLargeMargin-44 MuiTypography-body1"
      >
        Step 1
      </p>
      <h3
        class="MuiTypography-root makeStyles-smallMarginTop-41 MuiTypography-h3"
      >
        Pharmacist approval
      </h3>
      <p
        class="MuiTypography-root makeStyles-captionText-43 MuiTypography-body1"
      >
        One of our pharmacists will confirm you’re eligible for
         
        name-default
         
        treatment. This is to make sure your treatment is safe and suitable for you.
      </p>
      <h5
        class="MuiTypography-root makeStyles-marginTop-40 MuiTypography-h5"
      >
        What if my order isn't approved?
      </h5>
      <p
        class="MuiTypography-root makeStyles-captionText-43 MuiTypography-body1"
      >
        If our pharmacist can’t approve your order, they’ll explain the reason for this in an email.
      </p>
      <p
        class="MuiTypography-root makeStyles-captionTextLargeMargin-44 MuiTypography-body1"
      >
        Step 2
      </p>
      <h3
        class="MuiTypography-root makeStyles-smallMarginTop-41 MuiTypography-h3"
      >
        Order dispatched
      </h3>
      <p
        class="MuiTypography-root makeStyles-captionText-43 MuiTypography-body1"
      >
        We’ll dispatch your order as soon as a pharmacist approves it. Dispatch will be on the same working day if you made your order before 3pm.
        <br />
        <br />
        If you ordered after 3pm, we’ll dispatch your order the next working day. If you ordered over the weekend, your order will be processed on the next working day.
      </p>
      <p
        class="MuiTypography-root makeStyles-captionTextLargeMargin-44 MuiTypography-body1"
      >
        Step 3
      </p>
      <h3
        class="MuiTypography-root makeStyles-smallMarginTop-41 MuiTypography-h3"
      >
        Delivery
      </h3>
      <p
        class="MuiTypography-root makeStyles-captionText-43 MuiTypography-body1"
      >
        We’ll email you to let you know your order is out for delivery. It should be with you in 2-4 days.
      </p>
    </div>
  </div>
  <div
    class="makeStyles-container-60"
  >
    <hr
      class="MuiDivider-root"
    />
    <div
      class="makeStyles-upperSection-62"
    >
      <div
        class="makeStyles-upperCaptionContainer-64"
      >
        <a
          href="https://www.well.co.uk/"
        >
          <img
            alt="wellLogo"
            class="makeStyles-wellLogo-73"
            src="WellLogo.svg"
          />
        </a>
        <p
          class="MuiTypography-root makeStyles-caption-61 MuiTypography-body1"
        >
          This content was written and edited by Well. Our health information is evidence based, up-to-date and reviewed by health professionals. It isn’t intended to replace the medical information given to you by your doctor. We aim to provide you with the knowledge and support you need to make confident decisions about your health and wellbeing.
        </p>
      </div>
      <div
        class="makeStyles-linksList-66"
      >
        <h6
          class="MuiTypography-root makeStyles-links-67 MuiTypography-h6"
        >
          <a
            class="makeStyles-linkStyle-74"
            href="https://www.well.co.uk/about-us/policies/terms-and-conditions-vaccination-services"
          >
            Terms and conditions
          </a>
        </h6>
        <h6
          class="MuiTypography-root makeStyles-links-67 MuiTypography-h6"
        >
          <a
            class="makeStyles-linkStyle-74"
            href="https://www.well.co.uk/about-us/policies/privacy"
          >
            Privacy policy
          </a>
        </h6>
        <h6
          class="MuiTypography-root makeStyles-links-67 MuiTypography-h6"
        >
          <a
            class="makeStyles-linkStyle-74"
            href="https://www.well.co.uk/about-us/policies/cookies"
          >
            Cookies
          </a>
        </h6>
      </div>
      <div
        class="makeStyles-supportEmail-68"
      >
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
          For support email
        </p>
        <h6
          class="MuiTypography-root MuiTypography-h6"
        >
          <a
            class="makeStyles-linkStyle-74"
            href="mailto:hello@well.co.uk"
          >
            hello@well.co.uk
          </a>
        </h6>
      </div>
    </div>
    <hr
      class="MuiDivider-root"
    />
    <div
      class="makeStyles-lowerSection-63"
    >
      <div
        class="makeStyles-lowerCaptionContainer-65"
      >
        <p
          class="MuiTypography-root makeStyles-caption-61 MuiTypography-body1"
        >
          Bestway National Chemists Limited is registered in England and Wales, trading as Well and Well Pharmacy. Our online pharmacy (well.co.uk) registration number is 9010492 and the registered pharmacy address is: Well, Healthcare Service Centre, Meir Park, Stoke-on-Trent, Staffordshire, ST3 7UN. If you would like to know who the Responsible Pharmacist is at any given time, please email nhspharmacy.stoke.well.co.ukfap20@nhs.net or call 01782 597313. You can also contact the pharmacy on hello@well.co.uk. Our Superintendent Pharmacist is Iftkhar Ahmad Khan, FRPharmS. GPhC Registration Number: 2041286. You can find out more about checking if an online pharmacy is operating legally from the General Pharmaceutical Council (GPhC).
        </p>
      </div>
      <div
        class="makeStyles-logoContainer-72"
      >
        <a
          href="https://www.nhs.uk/"
        >
          <img
            alt="nhs"
            class="makeStyles-logo1-69"
            src="NHS.png"
          />
        </a>
        <a
          href="https://www.legitscript.com/websites/well.co.uk"
        >
          <img
            alt="well"
            class="makeStyles-logo2-70"
            src="Well.svg"
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;
